search knappen öppnar sida 2

--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@
 </div>
 
 <div id="search">
-    <form id="searchDestination" name="destination">
+    <form id="searchDestination" name="destination" action="HTMLsida2.html">
         <div class="inputs-container">
             <label for="whereFrom">From</label>
             <input type="text" name="whereFrom">
